Actualice estilos al CSS

--- a/style.css
+++ b/style.css
@@ -62,7 +62,7 @@ nav ul {
 nav a {
   text-decoration: none;
   font-size: 15px; /* Cambia este valor según el tamaño que desees */
-  color: #050505;
+  color: #ec0808;
   font-weight: bold;
   padding: 10px 15px;
   border-radius: 6px;
